# ML-OPS

./: .gitignore  README.md  demo.ipynb  demo.py  pyproject.toml  requirements.txt
app/: app.py  consumo_app.ipynb
data/: demo50.csv
docs/: demo.ipynb
models/: logistic_regression_churn.pkl
notebooks/: churn_model.ipynb
streamlit/: streamlit_app.py
