[project]
name = "ml-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.57.0",
    "ydata-profiling>=4.18.4",
]
